# rust-dominator-boilerplate

./: .gitignore  Cargo.toml  README.md  bootstrap.js  package.json  webpack.config.js
docs/: 1-INSTALL.md  2-STATIC.md  3-LIBRS.md  4-APPRS.md  5-WEBPACK.md  6-GITIGNORE.md
src/: app.rs  lib.rs
src/static/: index.html
